@startuml

title __CONTROLLERS's Class Diagram__\n

  package com.engineer.lrogozinski {
    package com.engineer.lrogozinski.controllers {
      class AuthenticationController {
          - authenticationManager : AuthenticationManager
          + register()
      }
    }
  }
  

  package com.engineer.lrogozinski {
    package com.engineer.lrogozinski.controllers {
      class EventCategoryController {
          + EventCategoryController()
          + getAllEventCategories()
          + addEventCategoryToFavouriteList()
      }
    }
  }
  

  package com.engineer.lrogozinski {
    package com.engineer.lrogozinski.controllers {
      class EventController {
          + EventController()
          + getAllEvents()
          + addEvent()
          + getEventDetails()
      }
    }
  }
  

  package com.engineer.lrogozinski {
    package com.engineer.lrogozinski.controllers {
      class UserController {
          + UserController()
          + listUser()
          + getOne()
          + getLoggedUserInfo()
      }
    }
  }
  

  package com.engineer.lrogozinski {
    package com.engineer.lrogozinski.controllers {
      class WebSockerController {
          - simpMessageSendingOperations : SimpMessageSendingOperations
          + processMessageFromClient()
          + handleException()
      }
    }
  }
  

  AuthenticationController o-- JwtTokenUtil : jwtTokenUtil
  AuthenticationController o-- UsedTokenService : usedTokenService
  EventCategoryController o-- EventCategoryService : eventCategoryService
  EventCategoryController o-- EventCategoryToEventCategoryDto : eventCategoryToEventCategoryDto
  EventCategoryController o-- EventCategoryDtoToEventCategory : eventCategoryDtoToEventCategory
  EventCategoryController o-- UserDataService : userDataService
  EventCategoryController o-- JwtTokenUtil : jwtTokenUtil
  EventController o-- JwtTokenUtil : jwtTokenUtil
  EventController o-- EventService : eventService
  EventController o-- EventDtoToEvent : eventDtoToEvent
  EventController o-- UserDataService : userDataService
  EventController o-- EventToEventDto : eventToEventDto
  UserController o-- UserService : userService
  UserController o-- JwtTokenUtil : jwtTokenUtil
  UserController o-- AccountToUserInfo : accountToUserInfo


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
